--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <section class="banner">
         <div class="texto">
-           <h1 class="titulo">queres</h1>
+           <h1 class="titulo">"Frasa de efeito"</h1>
            <div class="botoes">
                <a href="index 2.html"> <button class="overlay"> Começar </button> </a>
            </div>
