--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <nav>
-
         <div class="logo">
             <a>Correio Elengante </a>
         </div>
-
-       
-
     </nav>
+
+
     <section class="banner">
         <div class="texto">
-           <h1 class="titulo">"Frasa de efeito"</h1>
+
+           <h1 class="titulo2"> Fiz esse correio elegante mais engraçadinho por conta de daquele reels, além do correio, tem um bônus : &#41; </h1>
+           <h1 class="titulo"> "Mesmo que existissem infinitos mundos secretos, sei que não ha possibilidade de haver alguém melhor do que você." </h1>
            <div class="botoes">
-               <a href="index 2.html"> <button class="overlay"> Começar </button> </a>
+               <a href="index 2.html"> <button class="overlay"> Bônus </button> </a>
            </div>
         </div>
     </section>
